--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@notionhq/client": "^2.2.15",
         "@radix-ui/react-alert-dialog": "^1.0.5",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "lucide-react": "^0.263.1",
         "next": "^14.2.22",
+        "openai": "^4.77.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwind-merge": "^2.2.0",
