--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "clsx": "^2.1.0",
         "lucide-react": "^0.263.1",
         "next": "^14.2.22",
+        "notion-client": "^7.1.5",
         "openai": "^4.77.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
